<resources>
    <string name="app_name">AppGestacional</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="menu_seguimiento">Seguimiento Gestacional</string>
    <string name="menu_citas">Calendario de Citas</string>
    <string name="menu_mediciones">Mediciones y Pruebas</string>
    <string name="menu_diario">Diario de Sintomas</string>
    <string name="menu_consejos">Consejos y Recomendaciones</string>
    <string name="menu_recordatorios">Recordatorios y Alertas</string>
    <string name="PrinciaplMenu">Seguimiento Gestacional</string>
    <string name="Nombre">Sistema Gestacional</string>
    <string name="nomclinica">Clinica Internacional</string>
    <string name="btnregistrar">REGISTRAR</string>
    <string name="olvidoclave">Cambiar Contraseña</string>
    <string name="olvidoclavemsj">Ingrese su Correo</string>
    <string name="recomendaciones">¿Cuantos Meses Tienes?</string>
    <string name="etuswrnamelogin">Usuario</string>
    <string name="etpasswordlogin">Password</string>
    <string name="cbrecordarlogin">¿Recordar Credenciales?</string>
    <string name="btnlogin">Iniciar Sesion</string>
    <string name="Logout">Cerrar Sesion</string>
    <string name="pfrBienvenido">Bienvenido(a):</string>
    <string name="valolvideclave">Olvide Contraseña</string>
    <string name="valPresionArterial">Presion Arterial:</string>
    <string name="valPresionArteria">SYS/DIA</string>
    <string name="valmedidapresion">mmHg</string>
    <string name="valpeso">Peso(kg):</string>
    <string name="valaltura">Altura(m):</string>
    <string name="valimc">IMC:</string>
    <string name="valfecha">FECHA:</string>
    <string name="valdiariosint">Registra tus sintomas:</string>
    <string name="valregistrasintomas">Escribe tus sintomas...</string>
    <string name="valdiarioguardar">GUARDAR</string>
    <string name="valdiarioAlertas">Señales de Peligro en el embarazo:</string>
    <string name="valkg">Kg</string>
    <string name="valtemp">C°</string>
    <string name="valaltuterina">cm.</string>
    <string name="valfcf">Frecuencia Cardiaca x Minuto</string>
    <string name="valcitaspro">Citas Programadas</string>
    <string name="valconsejosrecomen">Consejos y Recomendaciones para ti y tu Bebe</string>
    <string name="valconsejosr">Consejos y Recomendaciones Para tu cuidado en esta Pronta llegada de tu Bebe!!!</string>
    <string name="valhistorialcitas">HISTORIAL DE CITAS</string>
    <string name="Historial">Historia de Citas</string>
    <string name="fragment_historial">Historial de Citas</string>
    <string name="nombreclinica">CAP III Surquillo</string>
    <string name="valhistorialmediciones">HISTORIAL MEDICIONES</string>
    <string name="menu_histmediciones">Historial Mediciones y Pruebas</string>
    <string name="menu_histmedicioes">Historial Mediciones</string>
    <string name="Historialmed">Historial de Mediciones</string>
    <string name="hostorialmediciones">Historial de Mediciones</string>
    <string-array name="options_array">
        <item>Mes 1</item>
        <item>Mes 2</item>
        <item>Mes 3</item>
        <item>Mes 4</item>
        <item>Mes 5</item>
        <item>Mes 6</item>
        <item>Mes 7</item>
        <item>Mes 8</item>
        <item>Mes 9</item>
    </string-array>
    <string-array name="movimiento_fetal">
        <item>NA</item>
        <item>+</item>
        <item>++</item>
        <item>+++</item>
        <item>SM</item>
    </string-array>
    <string-array name="edema_array">
        <item>SE</item>
        <item>+</item>
        <item>++</item>
        <item>+++</item>
    </string-array>
    <string-array name="centros_array">
        <item>C.I. Lima Centro</item>
        <item>C.I. San Borja</item>
        <item>C.I. San Isidro</item>
        <item>C.I. Surco</item>
    </string-array>
</resources>