<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/principalFragment">
    <fragment
        android:id="@+id/principalFragment"
        android:name="pe.edu.idat.appgestacional.View.fragment.PrincipalFragment"
        android:label="@string/menu_principal"
        tools:layout="@layout/fragment_principal" />
    <fragment
        android:id="@+id/seguimientoFragment"
        android:name="pe.edu.idat.appgestacional.View.fragment.SeguimientoFragment"
        android:label="@string/menu_seguimiento"
        tools:layout="@layout/fragment_seguimiento" />
    <fragment
        android:id="@+id/citasFragment"
        android:name="pe.edu.idat.appgestacional.View.fragment.CitasFragment"
        android:label="@string/menu_citas"
        tools:layout="@layout/fragment_citas" />
    <fragment
        android:id="@+id/medicionyPruebasFragment"
        android:name="pe.edu.idat.appgestacional.View.fragment.MedicionyPruebasFragment"
        android:label="@string/menu_mediciones"
        tools:layout="@layout/fragment_mediciony_pruebas" />
    <fragment
        android:id="@+id/diarioFragment"
        android:name="pe.edu.idat.appgestacional.View.fragment.DiarioFragment"
        android:label="@string/menu_diario"
        tools:layout="@layout/fragment_diario" />
    <fragment
        android:id="@+id/consejosFragment"
        android:name="pe.edu.idat.appgestacional.View.fragment.ConsejosFragment"
        android:label="@string/menu_consejos"
        tools:layout="@layout/fragment_consejos" />
    <fragment
        android:id="@+id/recordatoriosyAlertasFragment"
        android:name="pe.edu.idat.appgestacional.View.fragment.RecordatoriosyAlertasFragment"
        android:label="@string/menu_recordatorios"
        tools:layout="@layout/fragment_recordatoriosy_alertas" />
    <fragment
        android:id="@+id/historialCitasFragment"
        android:name="pe.edu.idat.appgestacional.View.fragment.HistorialCitasFragment"
        android:label="@string/fragment_historial"
        tools:layout="@layout/fragment_historial_citas" />
    <fragment
        android:id="@+id/historialMedicionesFragment"
        android:name="pe.edu.idat.appgestacional.View.fragment.HistorialMedicionesFragment"
        android:label="@string/hostorialmediciones"
        tools:layout="@layout/fragment_historial_mediciones" />
</navigation>